--- a/examples/index.html
+++ b/examples/index.html
@@ -5,12 +5,14 @@
         function init()
         {
             var charts = new OpenCharts.Chart("canvas",{height:500,width:500});
+            //charts.title = "Hello World";
+            charts.titleStyle.fColor = "#F00";
             charts.render();
         }
     </script>
 </head>
 <body onload="init()">
-<canvas id="canvas" height="500px" width="500px">
+<canvas id="canvas" height="500px" width="500px" style="border: 1px solid #c3c3c3;">
 </canvas>
 </body>
 </html>
