文本居中属性添加

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
         {
             var charts = new OpenCharts.Chart("canvas",{height:500,width:500});
             //charts.title = "Hello World";
-            charts.titleStyle.fColor = "#F00";
+            //charts.titleStyle.fColor = "#000";
             charts.render();
         }
     </script>
