--- a/examples/index.html
+++ b/examples/index.html
@@ -4,15 +4,32 @@
     <script type="text/javascript">
         function init()
         {
-            var charts = new OpenCharts.Chart("canvas",{height:500,width:500});
+            var charts = new OpenCharts.Chart("canvas");
             //charts.title = "Hello World";
             //charts.titleStyle.fColor = "#000";
             charts.render();
+
+            var items = [];
+            var style = new OpenCharts.Style();
+            style.fillStyle = "#F00";
+
+            items.push({strCaption : '成都',data : 0,itemStyle:'#000'});
+            items.push(new OpenCharts.Item(1,"1",style));
+            items.push(new OpenCharts.Item(2,"2","#020"));
+            items.push(new OpenCharts.Item(3,"3","#030"));
+            items.push(new OpenCharts.Item(4,"4","#040"));
+            items.push(new OpenCharts.Item(5,"5","#050"));
+            items.push(new OpenCharts.Item(6,"6","#060"));
+            items.push(new OpenCharts.Item(7,"7","#070"));
+            items.push(new OpenCharts.Item(8,"8","#080"));
+            items.push(new OpenCharts.Item(9,"9","#090"));
+
+            charts.addItems(items);
         }
     </script>
 </head>
 <body onload="init()">
-<canvas id="canvas" height="500px" width="500px" style="border: 1px solid #c3c3c3;">
+<canvas id="canvas" height="500px" width="1024px">
 </canvas>
 </body>
 </html>
