--- a/examples/index.html
+++ b/examples/index.html
@@ -7,7 +7,6 @@
             var charts = new OpenCharts.Chart("canvas");
             //charts.title = "Hello World";
             //charts.titleStyle.fColor = "#000";
-            charts.render();
 
             var items = [];
             var style = new OpenCharts.Style();
@@ -25,6 +24,10 @@
             items.push(new OpenCharts.Item(9,"9","#090"));
 
             charts.addItems(items);
+
+            alert(charts.getMaxValue());
+
+            charts.render();
         }
     </script>
 </head>
