create div 点击事件实现

--- a/examples/index.html
+++ b/examples/index.html
@@ -7,9 +7,9 @@
         {
             var myCanvas = document.getElementById("canvas");
             var myContext =  myCanvas.getContext("2d");
-            myCanvas.addEventListener("mousedown",OnMouseDown,false);
+            //myCanvas.addEventListener("mousedown",OnMouseDown,false);
             charts = new OpenCharts.Chart.AreaChart("canvas");
-            //charts.title = "Hello World";
+            charts.strTitle = "Hello World";
             //charts.titleStyle.fColor = "#000";
 
             var items = [];
@@ -30,13 +30,35 @@
             items.push(new OpenCharts.Item(4,"十二月","#090"));
 
             charts.addItems(items);
+            charts.addEventListener("mousedown","test");
+
+            /*
+            var msgObj=document.createElement("div")
+            msgObj.setAttribute("id","msgDiv");
+            msgObj.setAttribute("align","center");
+            msgObj.style.background="white";
+            msgObj.style.border="1px solid " + "#000";
+            msgObj.style.position = "absolute";
+            msgObj.style.left = "50%";
+            msgObj.style.top = "50%";
+            msgObj.style.font="12px/1.6em Verdana, Geneva, Arial, Helvetica, sans-serif";
+            msgObj.style.marginLeft = "-225px" ;
+            msgObj.style.marginTop = -75+document.documentElement.scrollTop+"px";
+            msgObj.style.width = 100 + "px";
+            msgObj.style.height =600 + "px";
+            msgObj.style.textAlign = "center";
+            msgObj.style.lineHeight ="25px";
+            msgObj.style.zIndex = "10001";
+            msgObj.style.position = "absolute";
+            msgObj.innerHTML = "d"
+            document.body.appendChild(msgObj);
+            */
 
             charts.render();
         }
 
         function OnMouseDown(evt)
         {
-
             var mouseX=evt.layerX;
             var mouseY=evt.layerY;
             var items = charts.getItemByPosition(mouseX,mouseY);
