--- a/examples/index.html
+++ b/examples/index.html
@@ -103,7 +103,7 @@
 
             charts2.addItems(items,"北京");
             charts2.addItems(itemss,"上海");
-            charts2.addItems(itemsss,"西安");
+            charts2.addItems(itemsss,"中华人民共和国陕西省西安市");
             charts2.addEventListener("mousedown",message);
 
             charts3 = new OpenCharts.Chart.BarChart("canvas3");
