增加编译混淆代码，提交至github

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,6 +1,7 @@
 ﻿<html>
 <head>
-    <script type="text/javascript" src="../lib/OpenCharts.js"></script>
+    
+	<script type="text/javascript" src="../OpenCharts.js"></script>
     <link rel="stylesheet" href="../theme/default/style.css" type="text/css">
     <script type="text/javascript">
         var charts,charts1,charts2,charts3;
