--- a/examples/index.html
+++ b/examples/index.html
@@ -11,18 +11,18 @@
             var style = new OpenCharts.Style();
             style.fillStyle = "#F00";
 
-            items.push({strCaption : '一月',data : 2,itemStyle:'#00FFFF'});
+            items.push({strCaption : '一月',data : 2,itemStyle:'#C0FFFF'});
             items.push(new OpenCharts.Item(12,"二月",style));
-            items.push(new OpenCharts.Item(14,"三月","#0F0"));
-            items.push(new OpenCharts.Item(20,"四月","#00F"));
-            items.push(new OpenCharts.Item(28,"五月","#FF0"));
-            items.push(new OpenCharts.Item(32,"六月","#0FF"));
-            items.push(new OpenCharts.Item(34,"七月","#FF8"));
-            items.push(new OpenCharts.Item(36,"八月","#F0F"));
-            items.push(new OpenCharts.Item(33,"九月","#888"));
-            items.push(new OpenCharts.Item(24,"十月","#800"));
-            items.push(new OpenCharts.Item(14,"十一月","#080"));
-            items.push(new OpenCharts.Item(4,"十二月","#008"));
+            items.push(new OpenCharts.Item(14,"三月","#FFC000"));
+            items.push(new OpenCharts.Item(20,"四月","#FFFF00"));
+            items.push(new OpenCharts.Item(28,"五月","#92D050"));
+            items.push(new OpenCharts.Item(32,"六月","#00B050"));
+            items.push(new OpenCharts.Item(34,"七月","#00B0F0"));
+            items.push(new OpenCharts.Item(36,"八月","#0070C0"));
+            items.push(new OpenCharts.Item(33,"九月","#002060"));
+            items.push(new OpenCharts.Item(24,"十月","#7030A0"));
+            items.push(new OpenCharts.Item(14,"十一月","#C0504D"));
+            items.push(new OpenCharts.Item(4,"十二月","#F79646"));
 
             var itemss = [];
             itemss.push({data : 4,itemStyle:'#dad81f'});
@@ -70,35 +70,11 @@
             charts1 = new OpenCharts.Chart.AreaChart("canvas1");
             charts1.strTitle = "Hello OpenCharts";
 
-            items1.push({strCaption : '一月',data : 2,itemStyle:'#F00'});
-            items1.push(new OpenCharts.Item(12,"二月",style));
-            items1.push(new OpenCharts.Item(14,"三月","#0F0"));
-            items1.push(new OpenCharts.Item(20,"四月","#00F"));
-            items1.push(new OpenCharts.Item(28,"五月","#FF0"));
-            items1.push(new OpenCharts.Item(32,"六月","#0FF"));
-            items1.push(new OpenCharts.Item(34,"七月","#FFF"));
-            items1.push(new OpenCharts.Item(36,"八月","#F0F"));
-            items1.push(new OpenCharts.Item(33,"九月","#888"));
-            items1.push(new OpenCharts.Item(24,"十月","#800"));
-            items1.push(new OpenCharts.Item(14,"十一月","#080"));
-            items1.push(new OpenCharts.Item(4,"十二月","#008"));
-            charts1.addItems(items1,"北京");
+            charts1.addItems(items,"北京");
             charts1.addItems(itemss,"上海");
             charts1.addItems(itemsss,"西安");
             charts1.addEventListener("mousedown",message);
 
-            items2.push({strCaption : '一月',data : 2,itemStyle:'#0F0'});
-            items2.push(new OpenCharts.Item(12,"二月",style));
-            items2.push(new OpenCharts.Item(14,"三月","#0F0"));
-            items2.push(new OpenCharts.Item(20,"四月","#00F"));
-            items2.push(new OpenCharts.Item(28,"五月","#FF0"));
-            items2.push(new OpenCharts.Item(32,"六月","#0FF"));
-            items2.push(new OpenCharts.Item(34,"七月","#FFF"));
-            items2.push(new OpenCharts.Item(36,"八月","#F0F"));
-            items2.push(new OpenCharts.Item(33,"九月","#888"));
-            items2.push(new OpenCharts.Item(24,"十月","#800"));
-            items2.push(new OpenCharts.Item(14,"十一月","#080"));
-            items2.push(new OpenCharts.Item(4,"十二月","#008"));
             charts2 = new OpenCharts.Chart.LineChart("canvas2");
             charts2.strTitle = "Hello Sunday";
 
