增加范例，更新文档

--- a/examples/PieChart01.html
+++ b/examples/PieChart01.html
@@ -1,7 +1,6 @@
 ﻿<html>
 <head>
-    //<script type="text/javascript" src="../lib/OpenCharts.js"></script>
-    <script type="text/javascript" src="../OpenCharts-min.js"></script>
+    <script type="text/javascript" src="../lib/OpenCharts.js"></script>
     <link rel="stylesheet" href="../theme/default/style.css" type="text/css">
     <script type="text/javascript">
         function init()
