--- a/examples/BarExChart01.html
+++ b/examples/BarExChart01.html
@@ -22,7 +22,7 @@
             items.push(new OpenCharts.Item(1485.74,"辽宁","#C0504D"));
             items.push(new OpenCharts.Item(1673.03,"河南","#F79646"));
 
-            charts = new OpenCharts.Chart.LineChart("canvas");
+            charts = new OpenCharts.Chart.BarExChart("canvas");
             charts.strTitle = "各省市上市公司总市值";
             charts.showLegend(false);
 
