--- a/examples/index.html
+++ b/examples/index.html
@@ -85,6 +85,7 @@
 
             charts3 = new OpenCharts.Chart.BarChart("canvas3");
             charts3.strTitle = "Hello My Github";
+            charts3.showLegend(false);
 
             charts3.addItems(items,"北京");
             //charts3.addItems(itemss,"上海");
