--- a/examples/LineChart01.html
+++ b/examples/LineChart01.html
@@ -1,4 +1,5 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html>
 <head>
     <script type="text/javascript" src="../OpenCharts-min.js"></script>
     <link rel="stylesheet" href="../theme/default/style.css" type="text/css">
