--- a/examples/index.html
+++ b/examples/index.html
@@ -1,7 +1,8 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html>
 <head>
     
-	<script type="text/javascript" src="../OpenCharts-min.js"></script>
+	<script type="text/javascript" src="../lib/OpenCharts.js"></script>
     <link rel="stylesheet" href="../theme/default/style.css" type="text/css">
     <script type="text/javascript">
         var charts,charts1,charts2,charts3,charts4 ;
